# lsip

./: README.md  main.py  pyproject.toml
lsip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
